--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
   color = true
 [user]
   name = Greg Signal
-  email = greg@awesome.org.nz
+  email = greg@cardboardstraw.com
 [alias]
   st = status
   ci = commit
