--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,26 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ',xterm-256color:Tc'
 
+set -g history-limit 10000
+
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 
