kitty updates for macos

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -34,4 +34,7 @@ map alt+9 							goto_tab 9
 
 # Do not keep the application open after the last window is closed in macOS
 # (i.e. allow ^D spam to actually quit everything)
-macos_quit_when_last_window_closed no
+macos_quit_when_last_window_closed  yes
+
+# Don't show the window title in the menu bar
+macos_show_window_title_in          window
