structure configs for platform differences

--- a/config/kitty/kitty.base.conf
+++ b/config/kitty/kitty.base.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
-shell                   /usr/bin/tmux
+shell                   .
 editor                  .
 
 # Font config
@@ -16,7 +16,7 @@ initial_window_width 		81c
 initial_window_height 	24c
 
 # ~ * c o l o u r s * ~
-include                 colorscheme.monokai-soda.conf
+include                 colorscheme/monokai-soda.conf
 background_opacity      1.0
 
 # Tab navigation shortcut keys similar to gui applications
@@ -29,12 +29,3 @@ map alt+6 							goto_tab 6
 map alt+7 							goto_tab 7
 map alt+8 							goto_tab 8
 map alt+9 							goto_tab 9
-
-# OS-specific stuff
-
-# Do not keep the application open after the last window is closed in macOS
-# (i.e. allow ^D spam to actually quit everything)
-macos_quit_when_last_window_closed  yes
-
-# Don't show the window title in the menu bar
-macos_show_window_title_in          window
