--- a/config/kitty/kitty.base.conf
+++ b/config/kitty/kitty.base.conf
@@ -29,3 +29,5 @@ map alt+6 							goto_tab 6
 map alt+7 							goto_tab 7
 map alt+8 							goto_tab 8
 map alt+9 							goto_tab 9
+
+include kitty.machine-specific.conf
