port palenight(ish) colorscheme to kitty

--- a/config/kitty/kitty.base.conf
+++ b/config/kitty/kitty.base.conf
@@ -16,7 +16,7 @@ initial_window_width 		81c
 initial_window_height 	24c
 
 # ~ * c o l o u r s * ~
-include                 colorscheme/monokai-soda.conf
+include                 colorscheme/palenight.conf
 background_opacity      1.0
 
 # Tab navigation shortcut keys similar to gui applications
