set locale env vars for tmux

--- a/config/kitty/kitty.macos.conf
+++ b/config/kitty/kitty.macos.conf
@@ -1,5 +1,7 @@
 include                 kitty.base.conf
 
+env                     LC_ALL=en_US.UTF-8
+env                     LANG=en_US.UTF-8
 shell                   /usr/local/bin/tmux
 
 # Do not keep the application open after the last window is closed in macOS
