--- a/config/kitty/kitty.base.conf
+++ b/config/kitty/kitty.base.conf
@@ -15,6 +15,8 @@ remember_window_size 		no
 initial_window_width 		81c
 initial_window_height 	24c
 
+tab_bar_style           powerline
+
 # ~ * c o l o u r s * ~
 include                 colorscheme/palenight.conf
 background_opacity      1.0
