--- a/config/kitty/kitty.base.conf
+++ b/config/kitty/kitty.base.conf
@@ -10,12 +10,15 @@ bold_font         			JetBrainsMono-Bold
 italic_font       			JetBrainsMono-Italic
 bold_italic_font  			JetBrainsMono-BoldItalic
 
-# Window size/behaviour
+# Window and layout configuration
 remember_window_size 		no
 initial_window_width 		81c
 initial_window_height 	24c
 
-tab_bar_style           powerline
+tab_bar_edge            bottom
+tab_bar_style           separator
+tab_separator           ""
+tab_title_template      " {title} "
 
 # ~ * c o l o u r s * ~
 include                 colorscheme/palenight.conf
