--- a/tmux.conf
+++ b/tmux.conf
@@ -12,34 +12,14 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# split panes using | and -
-bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -v -c '#{pane_current_path}'
+# split panes using | and - instead of % and "
 unbind '"'
 unbind %
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
-
-######################
-### DESIGN CHANGES ###
-######################
-
-## Status bar design
-# status line
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 2
-
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-
-# Info on left (I don't have a session display for now)
-set -g status-left ''
 
 # loud or quiet?
 set-option -g visual-activity off
@@ -48,20 +28,17 @@ set-option -g visual-silence off
 set-window-option -g monitor-activity off
 set-option -g bell-action none
 
-# The modes {
-setw -g clock-mode-colour colour135
-# }
-
-# The statusbar {
+## Status bar design
+set -g status-justify centre
+set -g status-interval 1
 
 set -g status-position bottom
-set -g status-bg colour238
-set -g status-fg colour137
-set -g status-left ''
-set -g status-right '#[fg=colour233,bg=colour241,bold] %d/%m #[fg=colour233,bg=colour245,bold] %H:%M:%S '
+set -g status-bg black
+set -g status-fg blue
+set -g status-left '#[bold,bg=blue,fg=black] #{pane_current_path} #[bg=default,fg=default] '
+set -g status-right '#[bold] %d/%m #[bold] %H:%M:%S '
 set -g status-right-length 50
-set -g status-left-length 20
+set -g status-left-length 50
 
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+# fzf the contents of the current directory + descendents
+bind-key -n 'C-f' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(rg --files #{pane_current_path} | fzf -m | paste -sd\\  -)\"'"
