--- a/config/kitty/kitty.macos.conf
+++ b/config/kitty/kitty.macos.conf
@@ -4,6 +4,9 @@ env                     LC_ALL=en_US.UTF-8
 env                     LANG=en_US.UTF-8
 shell                   /usr/local/bin/tmux
 
+# Set the title bar to match our colorscheme
+macos_titlebar_color    #292d3e
+
 # Do not keep the application open after the last window is closed in macOS
 # (i.e. allow ^D spam to actually quit everything)
 macos_quit_when_last_window_closed  yes
