adjust tmux pane movement bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,6 +18,16 @@ unbind %
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
+# Move panes with hjkl
+unbind-key h
+unbind-key j
+unbind-key k
+unbind-key l
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
 # Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
