(macos)include brew bin dir in path

--- a/config/kitty/kitty.macos.conf
+++ b/config/kitty/kitty.macos.conf
@@ -1,8 +1,13 @@
 include                 kitty.base.conf
 
+shell                   /usr/local/bin/tmux
+
+# Set locale env var so that tmux knows to deal with UTF-8 characters
 env                     LC_ALL=en_US.UTF-8
 env                     LANG=en_US.UTF-8
-shell                   /usr/local/bin/tmux
+
+# Include the brew bin dir in our path
+env                     PATH=$PATH:/usr/local/bin
 
 # Set the title bar to match our colorscheme
 macos_titlebar_color    #292d3e
