--- a/tmux.conf
+++ b/tmux.conf
@@ -51,4 +51,4 @@ set -g status-right-length 50
 set -g status-left-length 50
 
 # fzf the contents of the current directory + descendents
-bind-key -n 'C-f' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(rg --files #{pane_current_path} | fzf -m | paste -sd\\  -)\"'"
+# bind-key -n 'C-f' run "tmux split-window -p 40 'tmux send-keys -t #{pane_id} \"$(rg --files #{pane_current_path} | fzf -m | paste -sd\\  -)\"'"
