--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "zsh-z"]
 	path = zsh/zsh-z
 	url = https://github.com/agkozak/zsh-z
+[submodule "zsh/gitstatus"]
+	path = zsh/gitstatus
+	url = https://github.com/romkatv/gitstatus
