tweaks (mostly theme config readability)

--- a/config/kitty/colorscheme/palenight.conf
+++ b/config/kitty/colorscheme/palenight.conf
@@ -1,26 +1,6 @@
-color0                    #373b41
-color1                    #ff869a
-color2                    #c3e88d
-color3                    #ffcb6b
-color4                    #82b1ff
-color5                    #c792ea
-color6                    #89ddff
-color7                    #c5c8c6
-color8                    #535353
-color9                    #fa546f
-color10                   #9ee03d
-color11                   #faa507
-color12                   #387ef2
-color13                   #ab48ec
-color14                   #00b6ff
-color15                   #e7ebe8
+# vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
 cursor                    #f6f7ec
-
-background                #292d3e
-foreground                #bfc7d5
-selection_background      #c4c5b5
-selection_foreground      #292d3e
 
 active_tab_foreground     #82b1ff
 active_tab_background     #373b41
@@ -28,3 +8,45 @@ active_tab_font_style     bold
 inactive_tab_foreground   #535353
 inactive_tab_background   #292d3e
 inactive_tab_font_style   regular
+
+# Colors {{{
+
+selection_background #c4c5b5
+selection_foreground #292d3e
+
+background #292d3e
+foreground #bfc7d5
+
+# black
+color0   #373b41
+color8   #535353
+
+# red
+color1   #ff869a
+color9   #fa546f
+
+# green
+color2   #c3e88d
+color10  #9ee03d
+
+# yellow
+color3   #ffcb6b
+color11  #faa507
+
+# blue
+color4   #82b1ff
+color12  #387ef2
+
+# magenta
+color5   #c792ea
+color13  #ab48ec
+
+# cyan
+color6   #89ddff
+color14  #00b6ff
+
+# white
+color7   #c5c8c6
+color15  #e7ebe8
+
+# }}}
