--- a/config/kitty/kitty.base.conf
+++ b/config/kitty/kitty.base.conf
@@ -16,7 +16,8 @@ initial_window_width 		80c
 initial_window_height 	24c
 
 tab_bar_edge            bottom
-tab_bar_style           separator
+tab_bar_style           powerline
+tab_powerline_style     slanted
 tab_separator           ""
 tab_title_template      " {title} "
 
